<resources>
    <string name="app_name">PokeDexTracker</string>
    <string name="regionTxt">Choose a Region</string>
    <string name="btnKanto">Kanto</string>
    <string name="btnJohto">Johto</string>
    <string name="btnHoenn">Hoenn</string>
    <string name="btnSinnoh">Sinnoh</string>
    <string name="kantoTitle">Kanto Region</string>
    <string name="JohtoTitle">Johto Region</string>
    <string name="hoennTitle">Hoenn Region</string>
    <string name="sinnohTitle">Sinnoh Region</string>
    <string name="poke1">Bulbasaur</string>
    <string name="poke2">Ivysaur</string>
    <string name="poke3">Venusaur</string>
    <string name="poke4">Charmander</string>
    <string name="poke5">Charmeleon</string>
    <string name="poke6">Charizard</string>
    <string name="poke7">Squirtle</string>
    <string name="poke8">Wartortle</string>
    <string name="poke9">Blastoise</string>
    <string name="poke10">Caterpie</string>
    <string name="poke11">Metapod</string>
    <string name="poke12">Butterfree</string>
    <string name="poke13">Weedle</string>
    <string name="poke14">Kakuna</string>
    <string name="poke15">Beedrill</string>
    <string name="poke16">Pidgey</string>
    <string name="poke17">Pidgeotto</string>
    <string name="poke18">Pidgeot</string>
    <string name="poke19">Rattata</string>
    <string name="poke20">Raticate</string>
    <string name="poke21">Spearow</string>
    <string name="poke22">Fearow</string>
    <string name="poke23">Ekans</string>
    <string name="poke24">Arbok</string>
    <string name="poke25">Pikachu</string>
    <string name="poke26">Raichu</string>
    <string name="poke27">Sandshrew</string>
    <string name="poke28">Sandslash</string>
    <string name="poke29">Nidoran♀</string>
    <string name="poke30">Nidorina</string>
    <string name="poke31">Nidoqueen</string>
    <string name="poke32">Nidoran♂</string>
    <string name="poke33">Nidorino</string>
    <string name="poke34">Nidoking</string>
    <string name="poke35">Clefairy</string>
    <string name="poke36">Clefable</string>
    <string name="poke37">Vulpix</string>
    <string name="poke38">Ninetales</string>
    <string name="poke39">Jigglypuff</string>
    <string name="poke40">Wigglytuff</string>
    <string name="poke41">Zubat</string>
    <string name="poke42">Golbat</string>
    <string name="poke43">Oddish</string>
    <string name="poke44">Gloom</string>
    <string name="poke45">Vileplume</string>
    <string name="poke46">Paras</string>
    <string name="poke47">Parasect</string>
    <string name="poke48">Venonat</string>
    <string name="poke49">Venomoth</string>
    <string name="poke50">Diglett</string>
    <string name="poke51">Dugtrio</string>
    <string name="poke52">Meowth</string>
    <string name="poke53">Persian</string>
    <string name="poke54">Psyduck</string>
    <string name="poke55">Golduck</string>
    <string name="poke56">Mankey</string>
    <string name="poke57">Primeape</string>
    <string name="poke58">Growlithe</string>
    <string name="poke59">Arcanine</string>
    <string name="poke60">Poliwag</string>
    <string name="poke61">Poliwhirl</string>
    <string name="poke62">Poliwrath</string>
    <string name="poke63">Abra</string>
    <string name="poke64">Kadabra</string>
    <string name="poke65">Alakazam</string>
    <string name="poke66">Machop</string>
    <string name="poke67">Machoke</string>
    <string name="poke68">Machamp</string>
    <string name="poke69">Bellsprout</string>
    <string name="poke70">Weepinbell</string>
    <string name="poke71">Victreebel</string>
    <string name="poke72">Tentacool</string>
    <string name="poke73">Tentacruel</string>
    <string name="poke74">Geodude</string>
    <string name="poke75">Graveler</string>
    <string name="poke76">Golem</string>
    <string name="poke77">Ponyta</string>
    <string name="poke78">Rapidash</string>
    <string name="poke79">Slowpoke</string>
    <string name="poke80">Slowbro</string>
    <string name="poke81">Magnemite</string>
    <string name="poke82">Magneton</string>
    <string name="poke83">Farfetch’d</string>
    <string name="poke84">Doduo</string>
    <string name="poke85">Dodrio</string>
    <string name="poke86">Seel</string>
    <string name="poke87">Dewgong</string>
    <string name="poke88">Grimer</string>
    <string name="poke89">Muk</string>
    <string name="poke90">Shellder</string>
    <string name="poke91">Cloyster</string>
    <string name="poke92">Gastly</string>
    <string name="poke93">Haunter</string>
    <string name="poke94">Gengar</string>
    <string name="poke95">Onix</string>
    <string name="poke96">Drowzee</string>
    <string name="poke97">Hypno</string>
    <string name="poke98">Krabby</string>
    <string name="poke99">Kingler</string>
    <string name="poke100">Voltorb</string>
    <string name="poke101">Electrode</string>
    <string name="poke102">Exeggcute</string>
    <string name="poke103">Exeggutor</string>
    <string name="poke104">Cubone</string>
    <string name="poke105">Marowak</string>
    <string name="poke106">Hitmonlee</string>
    <string name="poke107">Hitmonchan</string>
    <string name="poke108">Lickitung</string>
    <string name="poke109">Koffing</string>
    <string name="poke110">Weezing</string>
    <string name="poke111">Rhyhorn</string>
    <string name="poke112">Rhydon</string>
    <string name="poke113">Chansey</string>
    <string name="poke114">Tangela</string>
    <string name="poke115">Kangaskhan</string>
    <string name="poke116">Horsea</string>
    <string name="poke117">Seadra</string>
    <string name="poke118">Goldeen</string>
    <string name="poke119">Seaking</string>
    <string name="poke120">Staryu</string>
    <string name="poke121">Starmie</string>
    <string name="poke122">Mr. Mime</string>
    <string name="poke123">Scyther</string>
    <string name="poke124">Jynx</string>
    <string name="poke125">Electabuzz</string>
    <string name="poke126">Magmar</string>
    <string name="poke127">Pinsir</string>
    <string name="poke128">Tauros</string>
    <string name="poke129">Magikarp</string>
    <string name="poke130">Gyarados</string>
    <string name="poke131">Lapras</string>
    <string name="poke132">Ditto</string>
    <string name="poke133">Eevee</string>
    <string name="poke134">Vaporeon</string>
    <string name="poke135">Jolteon</string>
    <string name="poke136">Flareon</string>
    <string name="poke137">Porygon</string>
    <string name="poke138">Omanyte</string>
    <string name="poke139">Omastar</string>
    <string name="poke140">Kabuto</string>
    <string name="poke141">Kabutops</string>
    <string name="poke142">Aerodactyl</string>
    <string name="poke143">Snorlax</string>
    <string name="poke144">Articuno</string>
    <string name="poke145">Zapdos</string>
    <string name="poke146">Moltres</string>
    <string name="poke147">Dratini</string>
    <string name="poke148">Dragonair</string>
    <string name="poke149">Dragonite</string>
    <string name="poke150">Mewtwo</string>
    <string name="poke151">Mew</string>
    <string name="poke152">Chikorita</string>
    <string name="poke153">Bayleef</string>
    <string name="poke154">Meganium</string>
    <string name="poke155">Cyndaquil</string>
    <string name="poke156">Quilava</string>
    <string name="poke157">Typhlosion</string>
    <string name="poke158">Totodile</string>
    <string name="poke159">Croconaw</string>
    <string name="poke160">Feraligatr</string>
    <string name="poke161">Sentret</string>
    <string name="poke162">Furret</string>
    <string name="poke163">Hoothoot</string>
    <string name="poke164">Noctowl</string>
    <string name="poke165">Ledyba</string>
    <string name="poke166">Ledian</string>
    <string name="poke167">Spinarak</string>
    <string name="poke168">Ariados</string>
    <string name="poke169">Crobat</string>
    <string name="poke170">Chinchou</string>
    <string name="poke171">Lanturn</string>
    <string name="poke172">Pichu</string>
    <string name="poke173">Cleffa</string>
    <string name="poke174">Igglybuff</string>
    <string name="poke175">Togepi</string>
    <string name="poke176">Togetic</string>
    <string name="poke177">Natu</string>
    <string name="poke178">Xatu</string>
    <string name="poke179">Mareep</string>
    <string name="poke180">Flaaffy</string>
    <string name="poke181">Ampharos</string>
    <string name="poke182">Bellossom</string>
    <string name="poke183">Marill</string>
    <string name="poke184">Azumarill</string>
    <string name="poke185">Sudowoodo</string>
    <string name="poke186">Politoed</string>
    <string name="poke187">Hoppip</string>
    <string name="poke188">Skiploom</string>
    <string name="poke189">Jumpluff</string>
    <string name="poke190">Aipom</string>
    <string name="poke191">Sunkern</string>
    <string name="poke192">Sunflora</string>
    <string name="poke193">Yanma</string>
    <string name="poke194">Wooper</string>
    <string name="poke195">Quagsire</string>
    <string name="poke196">Espeon</string>
    <string name="poke197">Umbreon</string>
    <string name="poke198">Murkrow</string>
    <string name="poke199">Slowking</string>
    <string name="poke200">Misdreavus</string>
    <string name="poke201">Unown</string>
    <string name="poke202">Wobbuffet</string>
    <string name="poke203">Girafarig</string>
    <string name="poke204">Pineco</string>
    <string name="poke205">Forretress</string>
    <string name="poke206">Dunsparce</string>
    <string name="poke207">Gligar</string>
    <string name="poke208">Steelix</string>
    <string name="poke209">Snubbull</string>
    <string name="poke210">Granbull</string>
    <string name="poke211">Qwilfish</string>
    <string name="poke212">Scizor</string>
    <string name="poke213">Shuckle</string>
    <string name="poke214">Heracross</string>
    <string name="poke215">Sneasel</string>
    <string name="poke216">Teddiursa</string>
    <string name="poke217">Ursaring</string>
    <string name="poke218">Slugma</string>
    <string name="poke219">Magcargo</string>
    <string name="poke220">Swinub</string>
    <string name="poke221">Piloswine</string>
    <string name="poke222">Corsola</string>
    <string name="poke223">Remoraid</string>
    <string name="poke224">Octillery</string>
    <string name="poke225">Delibird</string>
    <string name="poke226">Mantine</string>
    <string name="poke227">Skarmory</string>
    <string name="poke228">Houndour</string>
    <string name="poke229">Houndoom</string>
    <string name="poke230">Kingdra</string>
    <string name="poke231">Phanpy</string>
    <string name="poke232">Donphan</string>
    <string name="poke233">Porygon2</string>
    <string name="poke234">Stantler</string>
    <string name="poke235">Smeargle</string>
    <string name="poke236">Tyrogue</string>
    <string name="poke237">Hitmontop</string>
    <string name="poke238">Smoochum</string>
    <string name="poke239">Elekid</string>
    <string name="poke240">Magby</string>
    <string name="poke241">Miltank</string>
    <string name="poke242">Blissey</string>
    <string name="poke243">Raikou</string>
    <string name="poke244">Entei</string>
    <string name="poke245">Suicune</string>
    <string name="poke246">Larvitar</string>
    <string name="poke247">Pupitar</string>
    <string name="poke248">Tyranitar</string>
    <string name="poke249">Lugia</string>
    <string name="poke250">Ho-Oh</string>
    <string name="poke251">Celebi</string>
    <string name="poke252">Treecko</string>
    <string name="poke253">Grovyle</string>
    <string name="poke254">Sceptile</string>
    <string name="poke255">Torchic</string>
    <string name="poke256">Combusken</string>
    <string name="poke257">Blaziken</string>
    <string name="poke258">Mudkip</string>
    <string name="poke259">Marshtomp</string>
    <string name="poke260">Swampert</string>
    <string name="poke261">Poochyena</string>
</resources>